# onelf

./: .release-plz.toml  CHANGELOG.md  Cargo.toml  README.md  flake.nix
.github/workflows/: release-plz.yml  release.yaml
crates/onelf/: Cargo.toml  build.rs
crates/onelf-format/: CHANGELOG.md  Cargo.toml
crates/onelf-format/src/: entry.rs  footer.rs  lib.rs  macros.rs  manifest.rs
crates/onelf-rt/: CHANGELOG.md  Cargo.toml
crates/onelf-rt/src/: cache.rs  env.rs  interp.rs  loader.rs  main.rs  memfd.rs  metadata.rs  multicall.rs  portable.rs
crates/onelf-rt/src/fuse/: fs.rs  mod.rs  mount.rs  protocol.rs
crates/onelf/src/: bundle.rs  cache.rs  compress.rs  extract.rs  info.rs  list.rs  main.rs  metadata.rs  pack.rs
