[workspace]
resolver = "2"
members = [
  "crates/onelf",
  "crates/onelf-format",
  "crates/onelf-rt"
]
default-members = ["crates/onelf"]

[workspace.package]
version = "0.1.1"
edition = "2024"
license = "MIT"
repository = "https://github.com/QaidVoid/onelf"

[profile.release]
opt-level = "z"
strip = true
lto = true
panic = "abort"
codegen-units = 1

[workspace.dependencies]
blake3 = "1.8"
clap = { version = "4.5", features = ["derive"] }
goblin = { version = "0.9", default-features = false, features = ["elf64", "elf32", "endian_fd"] }
indicatif = "0.18"
jwalk = "0.8"
onelf-format = "0.1.0"
rayon = "1.11"
xxhash-rust = { version = "0.8", features = ["xxh32"] }
zstd = "0.13"
