[package]
name = "onelf-rt"
description = "Runtime stub for onelf packed binaries"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
onelf-format = { workspace = true }
rustix = { version = "1", features = ["fs"] }
zstd = { version = "0.13", default-features = false }
