[package]
name = "onelf"
description = "Packer CLI for creating onelf single-binary packages"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
blake3 = { workspace = true }
clap = { workspace = true }
goblin = { workspace = true }
indicatif = { workspace = true }
onelf-format = { workspace = true }
jwalk = { workspace = true }
rayon = { workspace = true }
xxhash-rust = { workspace = true }
zstd = { workspace = true }
